k8s/namespaces/authentik/authentik/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-http
  namespace: authentik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`authentik.oglesby.io`)
      kind: Rule
      services:
      - name: authentik-server
        port: 80
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-https
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
      - name: authentik-server
        port: 80
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-external-https
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.hosted.fail`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: authentik-server
          port: 80
  tls: 
    secretName: oglesby-io-tls
